# pleb

./: .gitignore  Cargo.toml  README.md  TO-DOS.md  pleb.example.toml
.claude/commands/: pleb-abandon.md  pleb-shipit.md  pleb-status.md
.planning/: BRIEF.md  MILESTONES.md  ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-github-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-session-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-orchestration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md
.planning/phases/05-hooks-and-skills/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-daemon-mode/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-unit-tests/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/phases/08-generic-hooks-ipc/: 08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-issue-media-downloading/: 09-01-SUMMARY.md
.planning/phases/10-provision-hooks/: 10-01-PLAN.md  10-01-SUMMARY.md
prompts/: new_issue.md  planning_done.md
prompts/completed/: 001-enhance-pleb-status.md
src/: claude.rs  cli.rs  commands.rs  config.rs  github.rs  hooks.rs  ipc.rs  main.rs  media.rs  state.rs  templates.rs  tmux.rs  worktree.rs
tmp/: pleb  pleb.example.toml
(+8 files in other folders)
