[package]
name = "pleb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
octocrab = "0.41"
handlebars = "6"
dirs = "5"
daemonize = "0.5"
tracing-appender = "0.2"
nix = { version = "0.30.1", features = ["signal"] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
